fix(plugins/plugin-client-common): tweak sidecar button spacing a bit
This PR also refactors the sidecar bottom toolbar stylings into their own file.

Fixes #6873

--- a/plugins/plugin-client-common/web/css/static/sidecar-main.css
+++ b/plugins/plugin-client-common/web/css/static/sidecar-main.css
@@ -120,13 +120,6 @@ $toolbar-height: 1.5rem;
     overflow: visible; /* for tooltip visibility */
   }
 
-  .sidecar-toolbar-text[data-location-bottom="true"],
-  .sidecar-bottom-stripe-mode-bits[data-location-bottom="true"] {
-    background-color: var(--color-sidecar-header);
-    color: var(--color-text-01);
-    font-size: calc(12em / 16);
-  }
-
   .sidecar-toolbar-text svg path {
     fill: var(--color-sidecar-toolbar-foreground);
     &[data-icon-path="inner-path"] {
@@ -176,7 +169,7 @@ $toolbar-height: 1.5rem;
   .sidecar-bottom-stripe-button {
     display: flex;
     line-height: 1.5em;
-    padding: 0 0.25em;
+    padding: 3px;
 
     & > button {
       padding: 0;
@@ -199,24 +192,6 @@ $toolbar-height: 1.5rem;
 
     [role="tab"] {
       display: flex;
-    }
-  }
-  .sidecar-bottom-stripe-mode-bits[data-location-bottom="true"] {
-    .sidecar-bottom-stripe-button {
-      padding: 1em;
-
-      &:hover {
-        background-color: var(--color-table-border3);
-      }
-
-      a,
-      button {
-        &:hover {
-          [role="tab"] {
-            color: var(--color-text-01);
-          }
-        }
-      }
     }
   }
   .graphical-icon svg {
@@ -429,7 +404,7 @@ $toolbar-height: 1.5rem;
     display: flex;
     justify-content: center;
     align-items: center;
-    margin-right: 3px;
+    margin-right: 0.375em;
 
     a,
     button {
